<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detalhesitem.DetalhesItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleGravity="center|bottom"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_collapseMode="pin" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                android:layout_gravity="bottom"
                android:textAlignment="center"
                android:background="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RatingBar
                    android:id="@+id/rBarAvaliacao"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:theme="@style/MyRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:numStars="10"
                    android:rating="6.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lblFichaTecnica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/ficha_tecnica"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lblAno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lbl_ano_producao"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblFichaTecnica"
                    app:layout_constraintTop_toBottomOf="@+id/lblFichaTecnica" />

                <TextView
                    android:id="@+id/txtAno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblAno"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblAno" />

                <TextView
                    android:id="@+id/lblDiretor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_dirigido_por"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblAno"
                    app:layout_constraintTop_toBottomOf="@+id/txtAno" />

                <TextView
                    android:id="@+id/txtDiretor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblDiretor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblDiretor" />

                <TextView
                    android:id="@+id/lblEstreia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_estreia"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblDiretor"
                    app:layout_constraintTop_toBottomOf="@+id/txtDiretor" />

                <TextView
                    android:id="@+id/txtEstreia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblEstreia"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblEstreia" />

                <TextView
                    android:id="@+id/lblDuracao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_duracao"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblEstreia"
                    app:layout_constraintTop_toBottomOf="@+id/txtEstreia" />

                <TextView
                    android:id="@+id/txtDuracao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblDuracao"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblDuracao" />

                <TextView
                    android:id="@+id/lblGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_genero"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblDuracao"
                    app:layout_constraintTop_toBottomOf="@+id/txtDuracao" />

                <TextView
                    android:id="@+id/txtGenero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblGenero"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblGenero" />

                <TextView
                    android:id="@+id/lblIdioma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_idioma"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblGenero"
                    app:layout_constraintTop_toBottomOf="@+id/txtGenero" />

                <TextView
                    android:id="@+id/txtIdioma"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblIdioma"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblIdioma" />

                <TextView
                    android:id="@+id/lblElenco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_elenco"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="@+id/lblIdioma"
                    app:layout_constraintTop_toBottomOf="@+id/txtIdioma" />

                <TextView
                    android:id="@+id/txtElenco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblElenco"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblElenco" />

                <TextView
                    android:id="@+id/lblSinopse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/sinopse"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/lblElenco"
                    app:layout_constraintTop_toBottomOf="@+id/txtElenco" />

                <TextView
                    android:id="@+id/txtSinopse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/lblSinopse"
                    app:layout_constraintTop_toBottomOf="@+id/lblSinopse" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbDetalhes"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>